# SciML_ROMs_Hasegawa_Wakatani

./: .gitignore  README.md  pyproject.toml
op_inf_lib/data_proc/: __init__.py  _basics.py  gems_lifting.py  process_sim_data.py  read_raw_sim_data.py
op_inf_lib/data_write/: __init__.py  write_to_tecplot.py
op_inf_lib/postproc/: __init__.py  integrate.py
op_inf_lib/utils/: __init__.py  helpers.py  scaling.py
opinf_for_hw/: config.py  frequency_analysis.py
opinf_for_hw/data_proc/: __init__.py  _basics.py  process_sim_data.py  read_raw_sim_data.py
opinf_for_hw/data_write/: write_to_tecplot.py
opinf_for_hw/postproc/: integrate.py
scripts_c1_0.1/: 01_OpInf_preprocessing_new_data.py  03_OpInf_quad_bad_reg.py  03_OpInf_quad_learn_outputs_reg_quad_ensemble_bad_reg.py  03_OpInf_quad_learn_outputs_reg_quad_ensemble_no_norm.py  03_OpInf_quad_recon_ensemble.py  03_OpInf_quad_runtime_ensemble.py  04_OpInf_full_dom_recon_ensemble.py  DMD.py  save_POD_svals.py
scripts_c1_0.1/config/: HW.py
scripts_c1_1.0/: 01_OpInf_preprocessing_new_data.py  03_DMD_compute_A_hat.py  03_DMD_review.py  03_OpInf_quad_learn_outputs_reg_quad_ensemble_no_norm.py  03_OpInf_quad_recon_ensemble.py  save_POD_modes.py
scripts_c1_1.0/config/: HW.py
scripts_c1_5.0/: 01_OpInf_preprocessing_new_data.py  01_save_POD_modes.py  03_OpInf_quad_learn_outputs_reg_quad_ensemble_no_norm.py  03_OpInf_quad_recon_ensemble.py  03_OpInf_quad_runtime_ensemble.py  save_gamma_ref.py
scripts_c1_5.0/config/: HW.py
visualization/: paper.mplstyle
visualization/02_reference/: plot_gamma_n_and_c_ref.py  (+3 more)
(+13 files in other folders)
